fix alignment

--- a/src/app/components/receipt/receipt.component.scss
+++ b/src/app/components/receipt/receipt.component.scss
@@ -63,6 +63,7 @@ h2, h3, h4, h5, h6 {
     }
 
     .receipt-item-icons {
+      text-align: right;
       flex-basis: 90px;
     }
   }
